2018-09-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1109

	* src/geodetic.cc (cart2poslos): Removed a consistency check I
	added some years ago. Now stumbled upon a case that did not show
	consistency with the alternative way to set za. In this case the
	alternative way clearly gave wrong result, and it seems that the
	code change I did works better than the old (now alternative) way.
	So removed the check.

2018-09-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1108

	* controlfiles/general/general.arts: lat_true and lon_true are now
	set to be empty.

	* src/ppath.cc (ppath_start_stepping): Commented out first checks
	for 3D. They were meant to provide a more clear error message, but
	they can result in fails for actually OK set-ups at high latitudes.

	* src/m_checked.cc (atmgeom_checkedCalc): The method now also
	checks lat_true and lon_true.

2018-09-03  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1107

	* src/m_disort.cc(DisortCalcWithARTSSurface):

	Adapted function placeholder to new signature of DisortCalcWithARTSSurface.

2018-09-03  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1106

	* 3rdparty/disort/LINPAK.f:

	Renamed functions with the same name as other BLAS function to
	avoid clashes suspected to lead to weird bugs when using ARTS
	through python.

	* src/disort.cc(check_disort_input):

	Updated error message on inhomogeneous scat data grids to mention
	interpolation option for pfct_method which supports them.

	* src/m_disort.cc(DisortCalcWithARTSSurface):

	Updated DisortCalcWithARTSSurface to also support the new
	extraction scheme for scattering properties.

	* src/methods(DisortCalcWithARTSSurface):

	Updated entry for DisortCalcWithARTSSurface.


2018-09-03  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1105

	* src/partition_function_data.cc, src/species_data.cc:

	Add cross section species CCl4, C2F6, CHF3, HFC32, HFC143a.
